@@ -1,0 +1,212 @@
+.\" Copyright © 2005-2006  Roger Leigh <rleigh@debian.org>
+.\"
+.\" schroot is free software; you can redistribute it and/or modify it
+.\" under the terms of the GNU General Public License as published by
+.\" the Free Software Foundation; either version 2 of the License, or
+.\" (at your option) any later version.
+.\"
+.\" schroot is distributed in the hope that it will be useful, but
+.\" WITHOUT ANY WARRANTY; without even the implied warranty of
+.\" MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+.\" General Public License for more details.
+.\"
+.\" You should have received a copy of the GNU General Public License
+.\" along with this program; if not, write to the Free Software
+.\" Foundation, Inc., 59 Temple Place, Suite 330, Boston,
+.\" MA  02111-1307  USA
+.TH DCHROOT 1 "28 Jan 2006" "Version @VERSION@" "Debian sbuild"
+.SH NAME
+dchroot \- enter a chroot environment
+.SH SYNOPSIS
+.B dchroot
+[\fIOPTION\fP]... [\fICOMMAND\fP]
+.SH DESCRIPTION
+\fBdchroot\fP allows the user to run a command or a login shell in a chroot
+environment.  If no command is specified, a login shell will be started in the
+user's current working directory inside the chroot.
+.PP
+This version of \fBdchroot\fP is a compatibility wrapper around the
+.BR schroot (1)
+program.  It is provided for backward compatibility with the \fBdchroot\fP
+command-line options, but \fBschroot\fP is recommended for future use.  See the
+section \[lq]\fIMigration\fP\[rq] below for help migrating your existing
+\fBdchroot\fP configuration to \fBschroot\fP.  See the section
+\[lq]\fIIncompatibilities\fP\[rq] below for known incompatibilities with
+\fBdchroot\fP.
+.PP
+If no chroot is specified, the chroot name or alias \fBdefault\fP will be used
+as a fallback.  If using the configuration in \fI/etc/dchroot.conf\fP, the
+first chroot in the file is the default.
+.SH OPTIONS
+Note that the original \fBdchroot\fP did not provide long options.
+\fBdchroot\fP accepts the following options:
+.SS Basic options
+.TP
+.B \-h, \-\-help
+Show help summary.
+.TP
+.B \-a, \-\-all
+Select all chroots.
+.TP
+.B \-l, \-\-list
+List all available chroots.
+.TP
+.B \-i, \-\-info
+Print detailed information about the specified chroots.  Note that the original
+\fBdchroot\fP did not include this option.
+.TP
+.B \-p, \-\-path
+Print location (path) of the specified chroots.
+.TP
+.B \-\-config
+Print configuration of the specified chroots.  This is useful for testing that
+the configuration in use is the same as the configuration file.  Any comments
+in the original file will be missing.  Note that the original \fBdchroot\fP did
+not include this option.
+.TP
+.B \-d, \-\-preserve\-environment
+Preserve the user's environment inside the chroot environment.  The default is
+to use a clean environment; this option copies the entire user environment and
+sets it in the session.
+.TP
+.B \-q, \-\-quiet
+Print only essential messages.
+.TP
+.B \-v, \-\-verbose
+Print all messages.  Note that the original \fBdchroot\fP did not include this
+option.
+.TP
+.B \-V, \-\-version
+Print version information.
+.SH CONFIGURATION
+The original \fBdchroot\fP configuration file, \fI/etc/dchroot.conf\fP has the
+following format:
+.IP \[bu]
+\[oq]#\[cq] starts a comment line.
+.IP \[bu]
+Blank lines are ignored.
+.IP \[bu]
+Chroot definitions are a single line containing an \fIidentifier\fP and a
+\fIpath\fP, separated by whitespace.  The first chroot is also the default.
+.PP
+An example file:
+.PP
+.RS
+\f[CR]# Example comment\fP
+.br
+\f[CR]\fP
+.br
+\f[CR]sarge /srv/chroot/sarge\fP
+.br
+\f[CR]sid /srv/chroot/sid\fP
+.br
+.RE
+.PP
+This file defines a chroot called \[oq]sarge\[cq], located at
+\fI/srv/chroot/sarge\fP, and a second chroot called \[oq]sid\[cq], located at
+\fI/srv/chroot/sid\fP.
+.SH INCOMPATIBILITIES
+.IP \[bu]
+Log messages are worded and formatted differently.
+.IP \[bu]
+The parsing of \fI/etc/dchroot.conf\fP uses a smaller list of allowed
+whitespace characters (space and tab), which may cause a parse error during
+tokenising if the file contains odd characters as separators, such as carriage
+returns, vertical tabs and form feeds.
+.IP \[bu]
+\fBdchroot\fP provides a restricted subset of the functionality implemented by
+\fBschroot\fP, but is still \fBschroot\fP underneath.  Thus \fBdchroot\fP is
+still subject to \fBschroot\fP security checking, including PAM authentication
+and authorisation, and session management, for example, and hence may behave
+slightly differently to the original \fBdchroot\fP in some circumstances.
+.SH MIGRATION
+To migrate an existing \fBdchroot\fP configuration to \fBschroot\fP, perform
+the following steps:
+.IP 1
+Dump the \fBdchroot\fP configuration in \fBschroot\fP keyfile format to
+\fI@SCHROOT_CONF@\fP.
+.PP
+.RS
+\f[CR]# \f[CB]dchroot --config >> @SCHROOT_CONF@
+.br
+.RE
+.PP
+.IP 2
+Edit \fI@SCHROOT_CONF@\fP to add access to the groups who are to be allowed to
+access the chroots, and make any other desired changes to the configuration.
+See
+.BI
+schroot.conf (5).
+.IP 3
+Remove \fI/etc/dchroot.conf\fP, so that \fBdchroot\fP will subsequently use
+\fI@SCHROOT_CONF@\fP for its configuration.
+.SH EXAMPLES
+\f[CR]$ schroot/dchroot -l\fP
+.br
+\f[CR]Available chroots: sarge [default], sid\fP
+.br
+\f[CR]\fP
+.br
+\f[CR]$ schroot/dchroot -p sid\fP
+.br
+\f[CR]/srv/chroot/sid\fP
+.br
+\f[CR]\fP
+.br
+\f[CR]$ dchroot -q -c sid -- uname -smr\fP
+.br
+\f[CR]Linux 2.6.15.4 ppc\fP
+.br
+\f[CR]\fP
+.br
+\f[CR]$ dchroot -c sid\fP
+.br
+\f[CR]I: [sid chroot] Running login shell: \[lq]/bin/bash\[rq]\fP
+.br
+\f[CR]$ \fP
+.br
+.LP
+Use \fB\-\-\fP to allow options beginning with \[oq]\-\[cq] or \[oq]\-\-\[cq]
+in the command to run in the chroot.  This prevents them being interpreted as
+options for \fBschroot\fP itself.  Note that the top line was echoed to
+standard error, and the remaining lines to standard output.  This is
+intentional, so that program output from commands run in the chroot may be
+piped and redirected as required; the data will be the same as if the command
+was run directly on the host system.
+.SH BUGS
+None known at this time.
+.SH FILES
+.TP
+.I /etc/dchroot.conf
+The system-wide \fBdchroot\fP chroot definition file.  This file must be owned
+by the root user, and not be writable by other.  If present, this file will be
+used in preference to @SCHROOT_CONF@.
+.TP
+.I @SCHROOT_CONF@
+The system-wide \fBschroot\fP definition file.  This file must be owned by the
+root user, and not be writable by other.
+.SH AUTHORS
+Roger Leigh.
+.PP
+This implementation of \fBdchroot\fP uses the same command-line options as the
+original \fBdchroot\fP by David Kimdon <dwhedon@debian.org>, but is an
+independent implementation.
+.SH COPYRIGHT
+Copyright \(co 2005-2006  Roger Leigh <rleigh@debian.org>
+.PP
+This program is free software; you can redistribute it and/or modify it
+under the terms of the GNU General Public License as published by the Free
+Software Foundation; either version 2 of the License, or (at your option)
+any later version.
+.SH SEE ALSO
+.BR schroot (1),
+.BR sbuild (1),
+.BR chroot (2),
+.BR schroot-setup (5),
+.BR schroot.conf (5).
+.\"#
+.\"# The following sets edit modes for GNU EMACS
+.\"# Local Variables:
+.\"# mode:nroff
+.\"# fill-column:79
+.\"# End:
