@@ -1,5 +1,9 @@
 2006-02-20  Roger Leigh  <rleigh@debian.org>
 
+	* schroot/dchroot.1.in: Add manual page for dchroot.
+
+2006-02-20  Roger Leigh  <rleigh@debian.org>
+
 	* schroot/schroot.cc: If SBUILD_DCHROOT_COMPAT is defined, run in
 	dchroot compatibility mode, using the alternate
 	dchroot::chroot_config and dchroot::session classes for reading
